@@ -1,0 +1,5 @@
+namespace System
+{
+    public delegate void Action1<T1>(T1 a1);
+    public delegate void Action5<T1, T2, T3, T4, T5>(T1 a1, T2 a2, T3 a3, T4 a4, T5 a5);
+}
