@@ -1,0 +1,8 @@
+﻿namespace flash.events
+{
+    public class KeyboardEvent : Event
+    {
+        public const string KEY_DOWN = "keyDown";
+        public const string KEY_UP = "keyUp";
+    }
+}
