@@ -1,0 +1,9 @@
+﻿namespace flash.events
+{
+    public class MouseEvent : Event
+    {
+        public const string MOUSE_DOWN = "mouseDown";
+        public const string MOUSE_MOVE = "mouseMove";
+        public const string MOUSE_UP = "mouseUp";
+    }
+}
